# next-firebase-note-app

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  docker-compose.yml  openapi-generator.config.json  orval.config.ts  package.json  pnpm-lock.yaml
backend/: .env.example  Dockerfile  Dockerfile.lambda  README.md  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: router.py
backend/src/app/api/routes/: authentication.py  personal_notebook.py  public_notes.py  user_profile.py
backend/src/app/application/ports/: note_repository.py  user_repository.py
backend/src/app/application/services/: auth_service.py  note_service.py  user_service.py
backend/src/app/domain/entities/: note.py  user.py
backend/src/app/domain/services/: note_service.py
backend/src/app/infra/auth/: firebase_auth_service.py
backend/src/app/infra/repositories/: dynamodb_note_repository.py  dynamodb_user_repository.py
backend/src/app/shared/: config.py  dependencies.py  generated_imports.py  logging.py
backend/tests/: .gitignore
docs/api/: README.md  openapi-schema-guideline.md  openapi.yml
docs/architecture/: app-concept.md  overview.md
docs/auth-security/: authentication.md  firebase-auth-setup.md  note-library-auth-implementation.md  security-header.md
docs/deployment/: vercel.md
docs/development/: coding-standards.md  (+4 more)
frontend/: .dockerignore  .env.example  Dockerfile  README.md  biome.json  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
infrastructure/: README.md  backend-deployment-guideline.md
(+110 files in other folders)
